tests/ui/errors/snapshots/parse_self_after_other_parameter_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:20]
 2 │ interface I {
 3 │   fn f(x: int, self) -> int
   ·                    ┬
   ·                    ╰── expected `:`
 4 │ }
   ╰────
  help:  · code: [parse.unexpected_token]
